--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,73 @@
-.title-form{
-  font-size: 2.5rem;
+@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro&family=Bitter:wght@600&family=Outfit:wght@300;400;600&family=Roboto+Condensed&family=Roboto:wght@300;700&display=swap');
+
+*{
+  font-family: 'Roboto Condensed', sans-serif;
 }
+
+:root{
+  --blue-main:#1697b7;
+  --blue-second:#30c2cd;
+  --white-main:#f3f3f3;
+  --orange-main:#f3ad79;
+  --orange-second: #e7804b;
+}
+
 .NavBar-color{
-  background-color: #00a2ff7b ;
+  background-color: var(--blue-second);
 }
+
+.error{
+  color: red;
+}
+.login-form{
+  padding: 3rem;
+  margin:auto;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+  max-width: 400px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 25px -10px var(--orange-second);
+}
+
+.logo-img{
+ width: 70%;
+ height: 100px;
+}
+
+.text-title{
+text-align: center;
+font-size: 1.3rem;
+font-weight: bold;
+color: var(--orange-second);
+
+}
+
+.password-field{
+display: flex;
+align-items: center;
+justify-content: space-between;
+}
+
+.password-field span{
+  cursor: pointer;
+  padding-left: 7px;
+}
+.input-field{
+  border: none;
+  width: 85%;
+  outline: none;
+}
+
+@media( width >= 480px){
+  .logo-img{
+    width: 60%;
+    height: 110px;
+   }
+
+   .password-field span{
+    cursor: pointer;
+    padding-left: 20px;
+  }
+}
+
+
