--- a/client/src/App.css
+++ b/client/src/App.css
@@ -58,6 +58,21 @@ justify-content: space-between;
   outline: none;
 }
 
+.register-link{
+  display: flex;
+  align-items: center;
+  padding-top:1.3rem;
+  flex-direction:column;
+ 
+}
+
+.register-link .create-account{
+  text-decoration: none;
+  color: var(--orange-second);
+}
+
+
+
 @media( width >= 480px){
   .logo-img{
     width: 60%;
@@ -67,6 +82,15 @@ justify-content: space-between;
    .password-field span{
     cursor: pointer;
     padding-left: 20px;
+  }
+
+  .register-link{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    flex-direction: row;
+    
+
   }
 }
 
