--- a/client/src/components/RegisterForm.css
+++ b/client/src/components/RegisterForm.css
@@ -1,9 +1,6 @@
-h1{
-    color: #30c3cd;
-}
-
 .custom-border{
-    border: 1px solid black;
+    border-radius: 10px;
+    box-shadow: 0px 0px 25px -10px var(--orange-second);
     padding: 20px;
     display: flex;
     flex-direction: column;
@@ -11,4 +8,16 @@ h1{
     height: 100vh;
     width: 50vw;
     margin: auto;
+}
+
+.signUp-title{
+    text-align: center;
+    font-size: 1.3rem;
+    font-weight: bold;
+    color: var(--orange-second);
+}
+
+.logo-img-signup{
+    /* width: 30%; */
+    height: 100px;
 }
