--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,21 +12,18 @@
   --orange-second: #e7804b;
 }
 
-.NavBar-color{
-  background-color: var(--blue-second);
-}
-
 .error{
   color: red;
 }
 .login-form{
   padding: 3rem;
   margin:auto;
-  margin-top: 5rem;
+  margin-top: 3rem;
   margin-bottom: 5rem;
   max-width: 400px;
   border-radius: 10px;
   box-shadow: 0px 0px 25px -10px var(--orange-second);
+  background-color: rgba(255, 255, 255, 0.7);
 }
 
 .logo-img{
@@ -71,9 +68,33 @@ justify-content: space-between;
   color: var(--orange-second);
 }
 
+/* .form-img{
+  display: flex;
+  align-items: center;
+  justify-content:flex-end; 
+  position: relative;
+  max-height: 700px;
+  margin: 1rem;
+  border-radius: 10px;
+  border: 1px solid black;
+} */
 
+.login-bg img{
+  /* width: 190vh; */
+  /* height: 120vh; */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 
-@media( width >= 480px){
+  /* width: 800px;
+  height: 600px;
+  padding:0 0 1rem 1rem; */
+}
+
+@media( width >=480px){
   .logo-img{
     width: 60%;
     height: 110px;
@@ -89,9 +110,49 @@ justify-content: space-between;
     justify-content: space-evenly;
     align-items: flex-start;
     flex-direction: row;
-    
+  }
+    .login-form{
+      padding: 3rem;
+      margin-left: 860px;
+      margin-top: 3rem;
+      margin-bottom: 5rem;
+      max-width: 400px;
+      border-radius: 10px;
+      box-shadow: 0px 0px 25px -10px var(--orange-second);
+      background-color: rgba(255, 255, 255, 0.7);
+    }
 
   }
-}
+
+  @media( width >=780px){
+    .logo-img{
+      width: 60%;
+      height: 110px;
+     }
+  
+     .password-field span{
+      cursor: pointer;
+      padding-left: 20px;
+    }
+  
+    .register-link{
+      display: flex;
+      justify-content: space-evenly;
+      align-items: flex-start;
+      flex-direction: row;
+    }
+      .login-form{
+        padding: 3rem;
+        margin-left: 860px;
+        margin-top: 3rem;
+        margin-bottom: 5rem;
+        max-width: 400px;
+        border-radius: 10px;
+        box-shadow: 0px 0px 25px -10px var(--orange-second);
+        background-color: rgba(255, 255, 255, 0.7);
+      }
+  
+    }
+
 
 
