Modifing product details

--- a/client/src/components/Products.css
+++ b/client/src/components/Products.css
@@ -4,7 +4,6 @@
     object-fit: cover;
     
 }
-
 .add-cart{
     cursor: pointer;
 }
@@ -13,6 +12,18 @@
     transition: 0.3s;
 }
 .product-cards:hover{
-    transform: translateY(-0.5rem);
+    transform: translateY(-0.8rem);
     box-shadow: 0.5rem 0.75rem 1.5rem #bbbb;
+}
+.sizes-display{
+    display: flex;
+    align-items: center; 
+}
+.sizes-display .dropdown {
+    margin-left: 10px;
+  }
+
+
+.product-info{
+    margin-top: 2rem;
 }
