--- a/client/src/components/NavBar.css
+++ b/client/src/components/NavBar.css
@@ -9,7 +9,7 @@
     /* background-color: white; */
     background-color: var(--orange-main);
     opacity: 0.8;
-  
+
 }
 
 .general-logo{
@@ -36,4 +36,25 @@
 
 .link-user{
     color: #000;
+}
+
+  
+.dropdown-search{
+    display: flex;
+    flex-direction: column;
+    position:absolute;
+    border-radius: 5px;
+    top: 4rem; /* Position the dropdown-search below the search button */
+    width: 18%;
+    background-color: white;
+
+}
+.dropdown-search:empty{
+    border: none;
+}
+.dropdown-search-row{
+    cursor: pointer;
+    text-align: start;
+    padding: 2px;
+    margin-left: 10px;
 }
