--- a/client/src/components/NavBar.css
+++ b/client/src/components/NavBar.css
@@ -20,17 +20,16 @@
     margin-right:60vh ;
 }
 .search-icon{
-    margin-right:  30px;
+    margin-right:  40px;
     cursor: pointer;
 }
-
 .user-icon{
-    margin-right: 30px;
+    margin-right: 40px;
     cursor: pointer;
 }
 
 .cart-icon{
-    margin-right: 30px;
+    /* margin-right: 30px; */
     cursor: pointer;
 }
 
@@ -38,7 +37,11 @@
     color: #000;
 }
 
-  
+.search-container{
+    margin-left: -3rem;
+    width:220px;
+    
+}
 .dropdown-search{
     display: flex;
     flex-direction: column;
@@ -57,4 +60,8 @@
     text-align: start;
     padding: 2px;
     margin-left: 10px;
+}
+.dropdown-search-img{
+    margin-left: 2rem;
+    max-width: 4.5rem;
 }
