--- a/client/src/components/NavBar.css
+++ b/client/src/components/NavBar.css
@@ -24,12 +24,17 @@
     cursor: pointer;
 }
 .user-icon{
-    margin-right: 40px;
+    margin-right: 30px;
     cursor: pointer;
 }
 
 .cart-icon{
-    /* margin-right: 30px; */
+    margin-right: 30px;
+    cursor: pointer;
+}
+
+.log-out-icon{
+    margin-right: 40px;
     cursor: pointer;
 }
 
