--- a/client/src/App.css
+++ b/client/src/App.css
@@ -81,6 +81,7 @@ justify-content: space-between;
   width: 100%;
   height: 100%;
   z-index: -1;
+  object-fit: cover;
 }
 
 @media( width >=480px){
