--- a/client/src/components/CarrouselSuggestions.css
+++ b/client/src/components/CarrouselSuggestions.css
@@ -3,14 +3,14 @@ h1 {
   }
   
   .product--image {
-    width: 85%;
-    height: 16em;
+    width: 100%;
+    height: 20rem;
     object-fit: cover;
   }
   
   .carrousel-card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    max-width: 320px;
+    max-width: 300px;
     margin: auto 1rem;
     text-align: center;
     font-family: arial;
