--- a/client/src/components/CarrouselSuggestions.css
+++ b/client/src/components/CarrouselSuggestions.css
@@ -1,38 +1,152 @@
-h1 {
-    margin: 1rem auto 4rem;
+.banner {
+  margin: 0 0 2rem 0;
+  padding: 0.2rem;
+  text-align: center;
+  background-color:var(--orange-second);
+
+}
+.banner  h2{
+  animation: slide 20s linear infinite ;
+
+}
+.banner-2 {
+  margin: 0 0 2rem 0;
+  padding: 0.2rem;
+  text-align: center;
+  background-color:var(--blue-second);
+
+}
+.banner-2  h2{
+  font-weight: bold;
+  animation: slide 20s linear infinite ;
+}
+.banner-3 {
+  margin: 2rem 0 2rem 0;
+  padding: 5rem;
+  text-align: center;
+  background-color:var(--orange-second);
+
+}
+.banner-3 h2{
+  font-weight: bold;
+}
+.banner-3 h4{
+  margin: 2rem;
+  font-style: italic;
+
+}
+
+
+@keyframes slide {
+  0% {
+    transform: translateX(100%);
   }
-  
-  .product--image {
-    width: 100%;
-    height: 20rem;
-    object-fit: cover;
+  100% {
+    transform: translateX(-100%);
   }
-  
-  .carrousel-card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    max-width: 300px;
-    margin: auto 1rem;
-    text-align: center;
-    font-family: arial;
-  }
-  
-  .price {
-    color: grey;
-    font-size: 22px;
-  }
-  
-  .carrousel-card button {
-    border: none;
-    outline: 0;
-    padding: 12px;
-    color: white;
-    background-color: #000;
-    text-align: center;
-    cursor: pointer;
-    width: 100%;
-    font-size: 18px;
-  }
-  
-  .carrousel-card button:hover {
-    opacity: 0.7;
-  }
+}
+.categories-layout{
+  display: grid;
+  grid-template-columns: repeat(2,45rem);
+  object-fit: cover;
+  margin-bottom:5rem;
+  overflow: hidden;
+}
+.first-block img{
+  width: 720px;
+  height: 720px;
+  object-fit: cover;
+}
+.first-block img:hover{
+  opacity: 0.5;
+  transform: scale(1.05) rotate(-13deg);
+}
+.second-block img{
+  width: 720px;
+  height: 720px;
+  object-fit: cover;
+}
+.second-block img:hover{
+  opacity: 0.5;
+  transform: scale(1.05) rotate(13deg);
+}
+.text-block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+.text-block h1{
+  margin-top: 10rem;
+}
+.text-block h4{
+  margin:3.5rem;
+  text-align: justify;
+}
+
+.text-block-button{
+  width: 350px
+}
+.product--image {
+
+  width: 100%;
+  height: 23rem;
+  object-fit: cover;
+}
+
+.carrousel-card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  width: 300px;
+  margin: auto;
+  text-align: center;
+  font-family: arial;
+  transition: 0.5s ease-in-out;
+}
+.carrousel-card:hover{
+  transform: translateY(20px);
+  opacity: 0.5;
+}
+/* .carrousel-card::before{
+  content: "";
+  position: absolute;
+  top:0;
+  left: 0;
+  display:block;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to bottom, rgb(100, 202, 227) 41%, rgb(215, 165, 140) 100%);
+  z-index: 2;
+  transition:0.5s  all;
+  opacity: 0;
+}
+.carrousel-card:hover::before{
+  opacity: 0.5;
+} */
+
+.price {
+  color: grey;
+  font-size: 22px;
+}
+
+.carrousel-card button {
+  border: none;
+  outline: 0;
+  padding: 12px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+
+  transition: 0.4s ease-in-out;
+  opacity: 0;
+
+}
+
+.carrousel-card:hover button{
+  opacity: 1;
+
+}
+
+
