--- a/client/src/components/CarrouselSuggestions.css
+++ b/client/src/components/CarrouselSuggestions.css
@@ -36,7 +36,6 @@
 
 }
 
-
 @keyframes slide {
   0% {
     transform: translateX(100%);
@@ -45,12 +44,52 @@
     transform: translateX(-100%);
   }
 }
+
+.arrow{
+  position:absolute;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+}
+
+.arrow span{
+  display: block;
+  width: 30px;
+  height:30px ;
+  border-bottom: 5px solid var(--blue-main);
+  border-right: 5px solid var(--blue-main);
+  transform: rotate(45deg);
+  margin:-10px;
+  animation: scrollArrow 2s infinite;
+}
+.arrow span:nth-child(2){
+  animation-delay: -0.2s;
+}
+.arrow span:nth-child(3){
+  animation-delay: -0.4s;
+}
+
+@keyframes scrollArrow {
+  0%{
+    opacity: 1;
+    transform: rotate(45deg) translate(-10px,-10px);
+  }
+  50%{
+    opacity: 1;
+  }
+  100%{
+    opacity: 0;
+    transform: rotate(45deg) translate(10px,10px);
+  }
+}
+
 .categories-layout{
   display: grid;
   grid-template-columns: repeat(2,45rem);
   object-fit: cover;
   margin-bottom:5rem;
   overflow: hidden;
+
 }
 .first-block img{
   width: 720px;
@@ -90,13 +129,13 @@
 .product--image {
 
   width: 100%;
-  height: 23rem;
+  height: 25rem;
   object-fit: cover;
 }
 
 .carrousel-card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  width: 300px;
+  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); */
+  width: 400px;
   margin: auto;
   text-align: center;
   font-family: arial;
@@ -105,23 +144,9 @@
 .carrousel-card:hover{
   transform: translateY(20px);
   opacity: 0.5;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
-/* .carrousel-card::before{
-  content: "";
-  position: absolute;
-  top:0;
-  left: 0;
-  display:block;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(to bottom, rgb(100, 202, 227) 41%, rgb(215, 165, 140) 100%);
-  z-index: 2;
-  transition:0.5s  all;
-  opacity: 0;
-}
-.carrousel-card:hover::before{
-  opacity: 0.5;
-} */
+
 
 .price {
   color: grey;
