--- a/client/src/components/Dashboard.css
+++ b/client/src/components/Dashboard.css
@@ -125,6 +125,7 @@ ul {
   font-size: 1.5rem;
   box-shadow: 0px 7px 25px rgba(0, 0, 0, 0.08);
   cursor: pointer;
+  margin-bottom: 4rem;
 }
 .panel-cards-content:hover {
   background-color: var(--blue-second);
