--- a/client/src/components/Dashboard.css
+++ b/client/src/components/Dashboard.css
@@ -104,6 +104,8 @@ ul {
 .principal-title {
   color: var(--blue-main);
   margin-bottom: 2rem;
+  text-align: center;
+  font-weight: bold;
 }
 .product-components {
   display: flex;
@@ -116,6 +118,7 @@ ul {
   grid-template-columns: repeat(4, 2fr);
   place-items: center;
 }
+
 .panel-cards-content {
   flex-flow: row !important;
   align-items: center;
@@ -126,19 +129,18 @@ ul {
   box-shadow: 0px 7px 25px rgba(0, 0, 0, 0.08);
   cursor: pointer;
   margin-bottom: 4rem;
+  transition: 0.3s;
 }
 .panel-cards-content:hover {
   background-color: var(--blue-second);
+  transform: translateY(-0.8rem);
 }
-
 
 .products-container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 1rem;
 }
-
-
 
 /* MEDIA QUERIES */
 
