--- a/client/src/components/CartModal.css
+++ b/client/src/components/CartModal.css
@@ -6,4 +6,9 @@
 .cart-modal-dialog {
     max-height: 100vh;
     margin: 0;
-  }
+}
+
+.cart-modal-body{
+    max-height: 400px;
+    overflow-y: auto;
+}
