--- a/client/src/components/CartModal.css
+++ b/client/src/components/CartModal.css
@@ -1,3 +1,7 @@
+*{
+  font-size: small;
+}
+
 .cart-modal-container{
     margin-top: 5rem;
     height: auto;
@@ -6,8 +10,20 @@
 .cart-modal-dialog {
     max-height: 100vh;
     margin: 0;
-  }
-  .cart-modal-body{
+}
+
+.cart-modal-header{
+  background-color: black;
+  color: white;
+}
+
+.cart-modal-body{
     max-height: 400px;
     overflow-y: auto;
-  }
+    background-color: #F4F2F2;
+}
+
+.cart-modal-footer{
+  background-color: #F4F2F2;
+  color: white;
+}
