--- a/client/src/components/CarrouselSuggestions.css
+++ b/client/src/components/CarrouselSuggestions.css
@@ -5,26 +5,29 @@
   background-color:var(--orange-second);
 
 }
-.banner  h2{
-  animation: slide 20s linear infinite ;
 
-}
+/* .banner  h2{
+  animation: slide 20s linear infinite ;
+} */
+
 .banner-2 {
   margin: 0 0 2rem 0;
   padding: 0.2rem;
   text-align: center;
   background-color:var(--blue-second);
-
+  color: white;
 }
 .banner-2  h2{
   font-weight: bold;
-  animation: slide 20s linear infinite ;
+  /* animation: slide 20s linear infinite ; */
 }
 .banner-3 {
   margin: 2rem 0 2rem 0;
   padding: 5rem;
   text-align: center;
-  background-color:var(--orange-second);
+  /* background-color:var(--orange-second); */
+  background-color: black;
+  color: white;
 
 }
 .banner-3 h2{
@@ -49,7 +52,6 @@
   position:absolute;
   left: 50%;
   transform: translate(-50%, -50%);
-
 }
 
 .arrow span{
@@ -61,10 +63,13 @@
   transform: rotate(45deg);
   margin:-10px;
   animation: scrollArrow 2s infinite;
+  
 }
+
 .arrow span:nth-child(2){
   animation-delay: -0.2s;
 }
+
 .arrow span:nth-child(3){
   animation-delay: -0.4s;
 }
@@ -84,36 +89,40 @@
 }
 
 .categories-layout{
+  max-width: 1200px;
+  margin: auto;
   display: grid;
   grid-template-columns: repeat(2,45rem);
   object-fit: cover;
   margin-bottom:5rem;
   overflow: hidden;
-
 }
 .first-block img{
-  width: 720px;
+  width: 100%;
   height: 720px;
   object-fit: cover;
 }
 .first-block img:hover{
   opacity: 0.5;
-  transform: scale(1.05) rotate(-13deg);
+  /* transform: scale(1.05) rotate(-13deg); */
+  transform: scale(1.05);
 }
 .second-block img{
-  width: 720px;
+  width: 100%;
   height: 720px;
   object-fit: cover;
 }
 .second-block img:hover{
   opacity: 0.5;
-  transform: scale(1.05) rotate(13deg);
+  /* transform: scale(1.05) rotate(13deg); */
+  transform: scale(1.05);
 }
 .text-block {
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
+  justify-content: center;
 }
 .text-block h1{
   margin-top: 10rem;
