--- a/client/src/components/CarrouselSuggestions.css
+++ b/client/src/components/CarrouselSuggestions.css
@@ -6,10 +6,6 @@
   background-color:black
 }
 
-/* .banner  h2{
-  animation: slide 20s linear infinite ;
-} */
-
 .banner-2 {
   margin: 0 0 2rem 0;
   padding: 0.2rem;
@@ -63,7 +59,6 @@
   transform: rotate(45deg);
   margin:-10px;
   animation: scrollArrow 2s infinite;
-  
 }
 
 .arrow span:nth-child(2){
@@ -88,7 +83,7 @@
   }
 }
 
-.categories-layout{
+/* .categories-layout{
   max-width: 1200px;
   margin: auto;
   display: grid;
@@ -97,24 +92,24 @@
   margin-bottom:5rem;
   overflow: hidden;
 }
+
 .first-block img{
   width: 100%;
   height: 720px;
   object-fit: cover;
-}
-.first-block img:hover{
+} */
+
+/* .first-block img:hover{
   opacity: 0.5;
-  /* transform: scale(1.05) rotate(-13deg); */
   transform: scale(1.05);
 }
 .second-block img{
   width: 100%;
   height: 720px;
   object-fit: cover;
-}
-.second-block img:hover{
+} */
+/* .second-block img:hover{
   opacity: 0.5;
-  /* transform: scale(1.05) rotate(13deg); */
   transform: scale(1.05);
 }
 .text-block {
@@ -140,10 +135,9 @@
   width: 100%;
   height: 25rem;
   object-fit: cover;
-}
+} */
 
-.carrousel-card {
-  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); */
+/* .carrousel-card {
   width: 400px;
   margin: auto;
   text-align: center;
@@ -154,10 +148,9 @@
   transform: translateY(20px);
   opacity: 0.5;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-}
+} */
 
-
-.price {
+/* .price {
   color: grey;
   font-size: 22px;
 }
@@ -176,10 +169,61 @@
   transition: 0.4s ease-in-out;
   opacity: 0;
 
-}
+} */
 
-.carrousel-card:hover button{
+/* .carrousel-card:hover button{
   opacity: 1;
 
+} */
+
+/* Grid */
+.grid-categories-container {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr); /* Cambiar a una sola columna en pantallas pequeñas */
+  gap: 16px;
 }
 
+.grid-categories-cell {
+  position: relative;
+}
+
+.grid-categories-image {
+  width: 100%;
+  height: auto;
+  cursor: pointer;
+}
+
+.grid-categories-image:hover{
+  opacity: 0.5;
+  /* transform: scale(1.05); */
+}
+
+.grid-categories-shop-button {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: black;
+  color: white;
+  border: none;
+  cursor: pointer;
+  border: 1px solid white;
+  font: 24px;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 0.3em;
+  padding: 0.5em 1em;
+}
+
+.grid-categories-shop-button:hover{
+  cursor: pointer;
+  background-color: white;
+  color: black;
+  border: 1px solid black;
+}
+
+@media (min-width: 768px) {
+  .grid-categories-container {
+    grid-template-columns: repeat(2, 1fr); /* Cambiar a dos columnas en pantallas más grandes */
+  }
+}
