--- a/client/src/components/NavBar.css
+++ b/client/src/components/NavBar.css
@@ -22,16 +22,20 @@
 .search-icon{
     margin-right:  40px;
     cursor: pointer;
+    font-size: 1.2rem;
 }
 
 .user-icon{
     margin-right: 30px;
     cursor: pointer;
+    color:white;
+    font-size: 1.2rem;
 }
 
 .cart-icon{
     margin-right: 30px;
     cursor: pointer;
+    font-size: 1.2rem;
 }
 
 .log-out-icon{
