Responsive design for Home, product details and cart

--- a/client/src/components/Dashboard.css
+++ b/client/src/components/Dashboard.css
@@ -1,7 +1,7 @@
 .wrapper {
   display: grid;
   grid-template-columns: 1fr 4fr;
-  background-color: var(--blue-main);
+  background-color: black;
 }
 
 ul {
