--- a/client/src/components/CartTotal.css
+++ b/client/src/components/CartTotal.css
@@ -1,33 +1,34 @@
-.shopping-cart-title{
-    margin-bottom: 2rem;
+.cart-content-total {
+  margin: 8rem 2rem; /* Adjusted margin for smaller screens */
+  border-radius: 1px solid black;
 }
 
 .cart-items-total {
   display: grid;
-  grid-template-columns: auto 1fr auto auto auto; /* Define 5 columnas con tamaños automáticos para la primera, segunda y 1fr (fracción) para las siguientes tres */
-  gap: 30px; /* Espaciado entre las columnas */
-  border-bottom: 1px solid #ccc; /* Agrega un borde inferior entre los productos */
-  padding: 10px 10px 10px 0px; /* Agrega espacio interno en la dirección vertical */
+  grid-template-columns: auto 1fr auto auto auto;
+  gap: 30px; /* Reduced gap for smaller screens */
+  border-bottom: 1px solid #ccc;
+  padding: 10px;
 }
 
-.cart-content-total {
-  margin: 8rem 20rem;
-  border-radius: 1px solid black;
+.less-button:hover{
+  color: red;
+  border: 2px dotted red;
 }
 
-  .cart-content-total {
-    margin: 8rem 20rem;
-    border-radius: 1px solid black;
-    
-  }
+.plus-button:hover{
+  color: green;
+  border: 2px dotted green;
+}
+
 .remove-button-total{
-  border: 1px dotted gray;
-  width: 20%;
+  width: 100%; 
+  margin: 10px 0; 
+  border: 2px dotted gray;
   border-radius: 8px;
   background: none;
   cursor: pointer;
   color: black;
-  display: flex;
   justify-content: center;
   padding: 0.5rem;
   margin: 0px 20px 0px 0px;
@@ -35,43 +36,42 @@
 
 .remove-button-total:hover {
   color: #d00; 
+  border: 2px dotted red;
 }
 
 .picture {
-  max-width: 120px; 
+  max-width: 80px; /* Reduced max-width for smaller screens */
   height: auto;
 }
 
-.price{
-  margin: 0px 5px;
-}
-
-.quantity-controls{
-  margin: 0px 20px;
-}
-
 .quantity-controls {
-  display: flex;
-  align-items: center;
-}
-
-.remove-button-total {
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  width: 3rem;
+  margin: 0; /* No margin for smaller screens */
 }
 
 .cart-total{
   margin: 20px;
 }
 
-.complete-purchase-button{
+.complete-purchase-button {
+  width: 100%; /* Full width for smaller screens */
+  margin-top: 10px;
   background-color: black;
   color: white;
   width: 50%;
-  padding: 5px;
+  padding: 3px;
   border-radius: 8px;
-  margin-top: 10px;
-  font-size: x-large;
+  font-size: large;
+  border: none;
+}
+
+.complete-purchase-button:hover{
+  background-color: orange;
+  border: orange;
+}
+
+@media screen and (min-width: 768px) {
+  /* Adjust styles for screens wider than 768px if needed */
+  .cart-content-total {
+    margin: 8rem 20rem;
+  }
 }
