--- a/client/src/components/NavBar.css
+++ b/client/src/components/NavBar.css
@@ -1,49 +1,161 @@
-.NavBar-color{
-    /* background-color: white; */
-    background-color: black;
-    color: var(--white-main);
-    /* opacity: 0.8; */
-    transition: all 500ms;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.nav-menu-text{
-    color:white  !important;
+header{
+    overflow-x: hidden;
+    overflow-y: hidden;
+    background-color: black;
 }
 
 .general-logo{
     max-width: 15vh;
+    margin: 1em;
 }
 
-
-.logo-container{
-    margin-right:60vh ;
+.group{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .search-icon{
-    margin-right:  40px;
-    cursor: pointer;
-    font-size: 1.2rem;
+    width: 60px;
+    color: white;
 }
 
-.user-icon{
-    margin-right: 30px;
-    cursor: pointer;
-    color:white;
-    font-size: 1.2rem;
+.close-icon{
+    width: 60px;
 }
 
-.log-out-icon{
-    margin-right: 40px;
-    cursor: pointer;
+.dropdown-menu {
+    position:fixed;
+    background-color: white;
+    z-index: 999;
 }
 
-.link-user{
-    color: #000;
+.navigation-tabs{
+    display: flex;
 }
 
-.search-container{
-    margin-left: -3rem;
-    width:220px;
+.navbar-expand{
+    justify-content: flex-end;
+}
+
+.navigation{
+    margin: 0;
+}
+
+.navigation .open{
+    background-color: red;
+}
+
+.group ul{
+    display: flex;
+    flex-direction: row;
+    gap: 40px;  
+    /* background-color: aqua; */
+    height: 80px;
+    /* margin-right: 10px; */
+}
+
+.group ul li{
+    list-style: none;
+    justify-content: flex-start;
+}
+
+.group ul li a{
+    position: relative;
+    text-decoration: none;
+    font-size: 1em;
+    /* color: #333; */
+    color: white;
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
+}
+
+.group ul li a::before{
+    content: '';
+    position: absolute;
+    bottom: -2px;
+    width: 100%;
+    height: 2px;
+    background-color: white;
+    transform: scaleX(0);
+    transition: transform 0.5s ease-in-out;
+    transform-origin: right;
+}
+
+.group  ul li a:hover::before{
+    transform: scaleX(1);
+    transform-origin: left;
+}
+
+header .searchBox{
+    position: absolute;
+    right: -100%;
+    width: 100%;
+    height: 80px;
+    display: flex;
+    background: #fff;
+    align-items: center;
+    padding: 0 30px;
+    transition: 0.5s ease-in-out;
+}
+
+.searchBox.active{
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+.searchBox.active input {
+    width: 100%;
+    box-sizing: border-box; 
+}
+
+.searchBox input{
+    display: flex;
+    align-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    border: none;
+    outline: none;
+    color: #333;
+    font-size: 1em;
+    background: #fff;
+    border-bottom: 1px solid rgba(0,0,0,0.05);
+}
+    
+.search-icon{
+    position: relative;
+    margin: 10px;
+    top: 2.5px;
+    transition: 0.5s ease-in-out;
+    width: 1.4em;
+    height: 1.4em;
+}
+
+.search-product-icon{
+    width: 1.4em;
+    height: 1.4em;
+    margin: 1.2em;
+}
+
+.search-icon.active{
+    left: 0;
+}
+    
+.close-icon{
+    width: 20px;
+    height: 20px;
+    /* opacity: 0; */
+    /* visibility: hidden; */
+    /* transition: 0.5s; */
+    /* transform: scale(0); */
 }
 
 .dropdown-search{
@@ -51,25 +163,37 @@
     flex-direction: column;
     position:absolute;
     border-radius: 5px;
-    top: 4rem; /* Position the dropdown-search below the search button */
+    top: 4rem; 
     width: 18%;
     background-color: white;
+    z-index: 999;
 }
 
 .dropdown-search:empty{
     border: none;
 }
+
 .dropdown-search-row{
     cursor: pointer;
     text-align: start;
     padding: 2px;
     margin-left: 10px;
+    z-index: 999;
 }
+
 .dropdown-search-img{
     margin-left: 2rem;
     max-width: 4.5rem;
+    z-index: 999;
 }
 
 .user-dropdown .dropdown-toggle::after{
     display: none;
+    z-index: 999;
+}
+
+.user-dropdown .user-dropdown-menu {
+    position: absolute;
+    top: 50px;
+    z-index: 999;
 }
