--- a/client/src/components/CartModal.css
+++ b/client/src/components/CartModal.css
@@ -5,28 +5,29 @@
   position: absolute;
   top: -30%;
   right: 55%;
-  background: orange;
-  color: white;
+  background: var(--blue-second);
+  color: black;
+  font-weight: bolder;
   border-radius: 50%;
   padding: 0.5px 5px;
-  font-size: 10px;
+  font-size: 11px;
 }
 
 .cart-icon{
   margin-right: 30px;
   cursor: pointer;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   color: white;
 }
 
 .cart-modal-container{
-    margin-top: 5rem;
-    height: auto;
+  margin-top: 5rem;
+  height: auto;
 }
 
 .cart-modal-dialog {
-    max-height: 100vh;
-    margin: 0;
+  max-height: 100vh;
+  margin: 0;
 }
 
 .cart-modal-header{
