--- a/client/src/components/NavBar.css
+++ b/client/src/components/NavBar.css
@@ -22,8 +22,9 @@ header{
 }
 
 .search-icon{
-    width: 60px;
     color: white;
+    font-size: 1rem;
+    cursor: pointer;
 }
 
 .close-icon{
@@ -33,32 +34,16 @@ header{
 .dropdown-menu {
     position:fixed;
     background-color: white;
-    z-index: 999;
-}
-
-.navigation-tabs{
-    display: flex;
-}
-
-.navbar-expand{
-    justify-content: flex-end;
 }
 
 .navigation{
     margin: 0;
 }
 
-.navigation .open{
-    background-color: red;
-}
-
 .group ul{
-    display: flex;
     flex-direction: row;
     gap: 40px;  
-    /* background-color: aqua; */
     height: 80px;
-    /* margin-right: 10px; */
 }
 
 .group ul li{
@@ -201,5 +186,14 @@ header .searchBox{
 .user-dropdown .user-dropdown-menu {
     position: absolute;
     top: 50px;
-    z-index: 999;
+}
+
+.user-icon{
+    cursor: pointer;
+    color:white;
+    font-size: 1.2rem;
+}
+
+.login{
+    display: flex;
 }
