--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,9 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro&family=Bitter:wght@600&family=Outfit:wght@300;400;600&family=Roboto+Condensed&family=Roboto:wght@300;700&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
-
 *{
-  /* font-family: 'Roboto Condensed', sans-serif; */
   font-family: "Raleway", sans-serif;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 :root{
