--- a/client/src/components/CartModal.css
+++ b/client/src/components/CartModal.css
@@ -3,8 +3,8 @@
 }
 .cart-counter {
   position: absolute;
-  top: -30%;
-  right: 55%;
+  top: 18%;
+  right: 31%;
   background: var(--blue-second);
   color: black;
   font-weight: bolder;
@@ -14,9 +14,9 @@
 }
 
 .cart-icon{
-  margin-right: 30px;
+  margin: 16px;
   cursor: pointer;
-  font-size: 1.5rem;
+  font-size: 2rem;
   color: white;
 }
 
