--- a/client/src/components/Products.css
+++ b/client/src/components/Products.css
@@ -79,3 +79,11 @@
 .drop-product-details {
     font-weight: bold;
 }
+
+/* Responsive */
+@media only screen and (max-width: 768px) {
+    .row{
+        display: flex;
+        flex-direction: column;
+    }
+}
