adding margin to the products, and footer with waves

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,8 +2,8 @@
 
 *{
   font-family: "Raleway", sans-serif;
-  max-width: 100%;
-  overflow-x: hidden;
+  /* max-width: 100%; */
+  /* overflow-x: hidden; */
 }
 
 :root{
