--- a/client/src/components/Products.css
+++ b/client/src/components/Products.css
@@ -1,7 +1,8 @@
 .products-img{
     width: 100%;
     height: 30rem;
-    object-fit: cover;
+    object-fit:contain;
+    background-color: #F3F4F6;
 }
 
 .add-cart{
@@ -10,7 +11,7 @@
 
 .product-cards{
     transition: 0.3s;
-    margin: 4rem 0.5rem 0rem 0.5rem;
+    margin: 2rem 1rem 0rem 2rem;
 }
 
 .product-cards:hover{
