pc navbar showing

--- a/client/src/components/NavBar.css
+++ b/client/src/components/NavBar.css
@@ -213,17 +213,19 @@ header .searchBox{
     width: 100px;
 }
 
-/* .menu-toggle {
-    display: none;
-} */
 
 @media screen and (max-width: 768px) {
     .menu-toggle.visible {
         color: white;
     }
 
-    .menu-toggle{
-        color: white;
+    .menu-toggle::before{
+        color:red;
+        /* background-color: red; */
+    }
+    .menu-toggle::after{
+        color:rgb(61, 228, 219);
+        /* background-color: red; */
     }
 
     .navigation-tabs ul{
